--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -6,7 +6,8 @@
 
 body {
   font-family: "Open Serif", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 500;
   max-width: 960px;
   margin: 0 auto;
 }
@@ -34,7 +35,7 @@ header {
   grid-area: header;
 }
 nav {
-  background-color: rgba(235, 161, 25, 0.286);
+  background-color: rgba(0, 0, 0, 0.619);
   grid-area: nav;
 }
 main {
@@ -60,4 +61,9 @@ footer {
 
 a {
   text-decoration: none;
+  color: #eee;
+}
+
+a:hover {
+  font-weight: 700;
 }
