--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -108,6 +108,16 @@ ul {
 
 li {
   margin: 10px;
+  list-style: none;
+}
+
+li a {
+  text-decoration: none;
+  color: black;
+}
+
+li a:hover {
+  font-weight: 800;
 }
 
 li::marker {
