--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -8,9 +8,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-header,
-main,
-footer {
+.general {
     max-width: 640px;
     margin: 1rem auto;
     border: 1px gainsboro solid;
