--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.general {
+header,main,footer {
     max-width: 640px;
     margin: 1rem auto;
     border: 1px gainsboro solid;
