--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -21,6 +21,13 @@ body {
 	margin: 0 auto;
 }
 
+main {
+	
+	border: 1px solid rgba(0, 0, 0, 0.133);
+	background-color: var(--main-bg-color);	
+}
+
+
 header {
 	background-color: var(--bg-color);
 	padding: 1rem;
@@ -107,17 +114,13 @@ figure div span {
 	display: block;
 }
 
-main {
-	
-	border: 1px solid rgba(0, 0, 0, 0.133);
-	background-color: var(--main-bg-color);	
-}
 
 .temples {
 	display: grid;
 	grid-template-columns: 1fr;
 	column-gap: 1rem;
 	justify-items: center;	
+	justify-content: center;
 }
 
 figure {
