--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -17,12 +17,10 @@ body {
 	font-family: 'Poppins', sans-serif;
 	color: var(--body-color);
 	max-width: 960px;
-	margin: 0 auto;
-	
+	margin: 0 auto;	
 }
 
-main {
-	
+main {	
 	border: 1px solid rgba(0, 0, 0, 0.133);
 	background-color: var(--main-bg-color);		
 }
@@ -39,7 +37,7 @@ h1 {
 	margin-left: 1rem;
 }
 
-h2{
+h2 {
 	font-size: 1.4rem;
 	color: var(--h2-color);
 	text-align: center;
@@ -50,23 +48,19 @@ figure {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-	padding-right: 12px;
-
+	justify-content: center;	
 }
 
 
-figcaption span {
+figure div span {
 	color: navy;
 }
 
-figcaption {
+figure div {
 	text-align: center;
 	text-wrap: nowrap;
 	color: var(--fig-color);
-	margin-bottom: 10px;
 }
-
 
 
 #menu {
