--- a/project/styles/ecommerse.css
+++ b/project/styles/ecommerse.css
@@ -12,7 +12,7 @@
 body {
     max-width: 1300px;
     margin: 0 25px;
-    background: radial-gradient(#fff, #ffd6d6);
+    background: radial-gradient(#fff, rgb(214, 232, 255));
     font-family: 'Poppins', sans-serif;
 }
 
@@ -23,25 +23,62 @@ header img {
 
 header {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-nav ul{
+nav {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+.navigation li {
+    padding: 0 15px;
+}
+
+#bag {
+    width: 24px;
+    cursor: pointer;  
+    display: none;  
+}
+
+#i-bag {
+    width: 24px;
+    cursor: pointer;  
+}
+
+
+#menu {
+    width: 48px;
+    cursor: pointer;
+}
+
+
+.navigation {
+	display: flex;
+	flex-direction: column;	
     list-style: none;
 }
 
-nav ul li {
-    padding: 0 20px;
+.navigation li a {
+  display: none;
+  text-align: center;
+  text-decoration: none;
+  color: var(--tag-color);
+}
+
+.open li a {
+	display: inline-block;
+    width: 100%;
 }
 
 
-a {
+.row a {
     text-decoration: none;
-    color: var(--tag-color);
 }
+
+
 
 p {
     color: var(--tag-color);
@@ -49,9 +86,10 @@ p {
 
 .caption {
     display: flex;
+    flex-direction: column;
     align-items: center; 
-    column-gap: 60px; 
-    padding: 25px;  
+    text-align: center;
+    
 }
 
 .hero {
@@ -86,4 +124,52 @@ p {
 
 .btn:hover {
     background: #563434;
+}
+
+
+
+
+@media screen and (min-width: 600px) {
+
+    .icons {
+        display: none;
+    }
+
+    #menu {
+        display: none;
+    }
+
+    #bag {
+        display: block;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+    }
+    
+    
+
+    .navigation {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        align-items: center;
+    }
+        
+
+    .navigation li a {
+		display: block;	
+	}
+
+    .caption {
+        display: flex;
+        flex-direction: row;
+        align-items: center; 
+        column-gap: 60px; 
+        padding: 25px;  
+    }
+    
+    
+
 }
