--- a/styles/filtered-temples-large.css
+++ b/styles/filtered-temples-large.css
@@ -27,6 +27,7 @@
     .temples {       
         justify-items: center;
         display: grid;
+        gap: 1rem;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 
