--- a/styles/product.css
+++ b/styles/product.css
@@ -57,7 +57,7 @@ main {
 }
 
 .wform div, .wform p {
-    margin-bottom: -0.5rem;
+    margin-bottom: -0.9rem;
     padding-top: 1rem;
     color: black;
     font-size: .9rem;
@@ -78,6 +78,8 @@ main {
 }
 
 .wform input[type="submit"] {
+    text-align: center;
+    text-wrap: wrap;
     cursor: pointer;
     color: #fff;
     margin: 1rem 0;
@@ -101,5 +103,15 @@ footer p {
 	text-align: center;
 }
 
+#res {
+    padding-top: 2rem;
+    text-align: center;
+}
+
+#rescount {
+    font-size: 20px;
+    padding-bottom: 2rem;
+    text-align: center;
+}
 
 
