--- a/project/styles/ecommerse.css
+++ b/project/styles/ecommerse.css
@@ -303,21 +303,30 @@ form input[type="email"] {
     border-radius: 6px;
     padding: .20rem;
     width: 100%;
+    height: 40px;
     max-width: 300px;
     font-size: 16px;
     margin: 10px 0;
     border: var(--form-border);    
 }
 
+form input:focus[type="text"],
+form input:focus[type="password"],
+form input:focus[type="email"] {
+    outline: none;
+}
+
+
 form .btn {
     width: 100%;
+    height: 30px;
     border: none;
     cursor: pointer;
     margin: 10px 0;
     display: block;    
 }
 
-form .btn:focus {
+form .btn:focus {    
     outline: none;
 }
 
@@ -540,16 +549,6 @@ td:last-child, th:last-child {
         margin-left: 6px;
     }
     
-
-      
-
-
-    
-    
-
-
-    
-
 
 
 }
