--- a/project/styles/ecommerse.css
+++ b/project/styles/ecommerse.css
@@ -96,7 +96,7 @@ nav {
 }
 
 .caption.open {
-    margin-top: 100px;
+    padding-top: 100px;
 }
 
 .open li a {
@@ -323,7 +323,8 @@ form .btn {
     border: none;
     cursor: pointer;
     margin: 10px 0;
-    display: block;    
+    display: block;  
+    font-size: 16px;  
 }
 
 form .btn:focus {    
