--- a/project/styles/ecommerse.css
+++ b/project/styles/ecommerse.css
@@ -61,6 +61,24 @@ main {
     justify-content: right;
 }
 
+.user {
+    padding-left: 5px;
+    color: var(--primary-color);
+    display: inline-block;
+    position: relative;
+}
+
+.user-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+}
+
+.user:hover .user-content {
+    display: block;
+}
+
 nav {
     position: relative;
 }
@@ -292,7 +310,7 @@ footer {
     max-width: 300px;
     padding: 0 40px;
     position: absolute;
-    top: 100px;
+    top: 70px;
     transition: transform 1s;
     
 }
@@ -408,6 +426,14 @@ form a {
     padding: 13px 100px;
 }
 
+.cart-page {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -459,9 +485,14 @@ td:last-child, th:last-child {
     max-width: 400px;
 }
 
-.cart-info p {
+.cart-page p {
     display: none;
 }
+
+.cart-page.open {
+    padding-top: 100px;
+}
+
 
 @media screen and (min-width: 600px) {
 
@@ -531,10 +562,11 @@ td:last-child, th:last-child {
         flex: 2 1 0px;
     }
 
-    .cart-info {
+    .cart-page {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     .total-price {
