--- a/project/styles/ecommerse.css
+++ b/project/styles/ecommerse.css
@@ -432,7 +432,7 @@ form a {
     border-radius: 50%;
     padding: 0.1rem 0.5rem;
     margin-left: -1rem;
-    margin-top: 2rem;
+    margin-top: -20px;
     font-size: 0.8rem;
 }
 
@@ -501,8 +501,8 @@ td:last-child, th:last-child {
 }
 
 .total-price .btn {
-    margin-top: -3rem;
-    font-size: 16px;
+    margin-top: -1rem;
+    font-size: 12px;
 }
 
 .cart-page p {
